Preparation for Integration Tests.